story alignment issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -638,8 +638,15 @@ pre code {
 
 .row {
   display: flex;
+  flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
+}
+
+.row-story {
+  display: flex;
+  margin-right: -30px;
+  margin-left: -30px;
 }
 
 .no-gutters {
@@ -9681,6 +9688,10 @@ a.text-dark:hover, a.text-dark:focus {
   position: relative;
   margin-bottom: 30px;
 }
+.timeline .row-story {
+  position: relative;
+  margin-bottom: 30px;
+}
 
 @media (min-width: 768px) {
   .timeline::after {
@@ -9706,6 +9717,28 @@ a.text-dark:hover, a.text-dark:focus {
     z-index: 1;
   }
   .timeline .row::after {
+    content: "\f004";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 400;
+    position: absolute;
+    top: calc(50% - 12px);
+    left: calc(50% - 10px);
+    color: #E47A2E;
+    z-index: 2;
+  }
+  .timeline .row-story::before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: calc(50% - 15px);
+    left: calc(50% - 15px);
+    background: #FFFFFF;
+    border: 2px solid #E47A2E;
+    transform: rotate(45deg);
+    z-index: 1;
+  }
+  .timeline .row-story::after {
     content: "\f004";
     font-family: "Font Awesome 5 Free";
     font-weight: 400;
@@ -9807,7 +9840,7 @@ a.text-dark:hover, a.text-dark:focus {
     margin-left: -1px;
     background: #E47A2E;
   }
-  .timeline .row::before {
+  .timeline .row-story::before {
     content: "";
     position: absolute;
     width: 30px;
@@ -9819,7 +9852,7 @@ a.text-dark:hover, a.text-dark:focus {
     transform: rotate(45deg);
     z-index: 1;
   }
-  .timeline .row::after {
+  .timeline .row-story::after {
     content: "\f004";
     font-family: "Font Awesome 5 Free";
     font-weight: 400;
